<resources>
    <string name="app_name">CesBLE</string>

    <string name="action_settings">Settings</string>
    <string name="action_bt_onoff">BT On/Off</string>
    <string name="action_bt_reset">BT Reset</string>
    <string name="action_audio_record">Record Audio</string>
    <string name="action_audio_record_stop">Stop Recording</string>
    <string name="action_audio_play">Play Audio</string>
    <string name="action_play_music">Play Music</string>
    <string name="action_sound_stop">Stop Sound</string>
    <string name="action_aina_spp">SPP test</string>
    <string name="action_aina_ble">AINA BLE test</string>
    <string name="action_peltor">Peltor test</string>

    <string name="state_disabled">Disabled</string>
    <string name="state_scanning">Scanning…</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_disconnecting">Disconnecting…</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_turning_off">Turning Off…</string>
    <string name="state_turning_on">Turning On…</string>

    <string name="bluetooth_disabled">Bluetooth is not enabled</string>
    <string name="bluetooth_low_energy_not_supported">Bluetooth Low Energy is not supported!</string>
    <string name="bluetooth_low_energy_not">This device is not Low Energy!</string>

    <string name="bluetooth_scan_classic">Classic Scan</string>
    <string name="bluetooth_scan_low_energy">Low Energy Scan</string>
    <string name="bluetooth_scan_paired">Paired</string>
    <string name="bluetooth_scan_stop">Stop Scanning</string>

    <string name="bluetooth_pairing_tle">Device pairing</string>
    <string name="bluetooth_pairing_msg">Do you want to pair the device %s?</string>
    <string name="bluetooth_paired_ok">Device paired</string>
    <string name="bluetooth_paired_error">Error pairing device</string>

    <string name="location_permission_tle">Location permission</string>
    <string name="location_permission_msg">Please grant location access so this app can detect beacons</string>
    <string name="location_permission_err">Without location permission Low Energy scan won\'t work</string>

    <string name="audiorecord_permission_tle">Audio recording permission</string>
    <string name="audiorecord_permission_msg">Please grant audio recording and file access so this app can record audio</string>
    <string name="audiorecord_permission_err">Without location permission Low Energy scan won\'t work</string>
</resources>
