<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cesoft.cesble.presenter.MainActivity">
    <item
        android:id="@+id/action_bt_reset"
        android:orderInCategory="100"
        android:title="@string/action_bt_reset"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bt_onoff"
        android:orderInCategory="101"
        android:title="@string/action_bt_onoff"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_audio_record"
        android:orderInCategory="101"
        android:title="@string/action_audio_record"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_audio_record_stop"
        android:orderInCategory="101"
        android:title="@string/action_audio_record_stop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_audio_play"
        android:orderInCategory="101"
        android:title="@string/action_audio_play"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_play_music"
        android:orderInCategory="101"
        android:title="@string/action_play_music"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sound_stop"
        android:orderInCategory="101"
        android:title="@string/action_sound_stop"
        app:showAsAction="never" />
</menu>
