<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presenter.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn_start_scan_classic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/bluetooth_scan_classic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_scan_le"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start_scan_le"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_scan_low_energy"
        app:layout_constraintEnd_toStartOf="@+id/btn_paired"
        app:layout_constraintStart_toEndOf="@+id/btn_start_scan_classic"
        app:layout_constraintTop_toTopOf="@+id/btn_start_scan_classic" />

    <Button
        android:id="@+id/btn_paired"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/bluetooth_scan_paired"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_start_scan_le"
        app:layout_constraintTop_toTopOf="@+id/btn_start_scan_le" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_scan_le" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_status" />

</androidx.constraintlayout.widget.ConstraintLayout>